# minimal-FastHTML-quickstart

./: README.md  pyproject.toml
src/fasthtml/: __init__.py
