[project]
name = "fasthtml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chrisjsimpson", email = "chris.j.simpson@live.co.uk" }
]
dependencies = [
    "python-fasthtml>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fasthtml"]
